Made ImageMagick the default resizer. Various tweaks and cleanup.